Solved visual issue for main page side banner on mobile devices

--- a/wp-content/themes/cristobalj/style.css
+++ b/wp-content/themes/cristobalj/style.css
@@ -1191,6 +1191,7 @@ label.es_shortcode_form_email span {
   margin-left: 0;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: center;
 }
 #datesContainer {
   min-width: 250px;
